# python_readwritelock

./: .gitignore  README.md  build_package.sh  build_requirements.txt  conftest.py  pyproject.toml  requirements.txt  run_tests.sh  tests_requirements.txt
readWriteLock/: __init__.py  readwritelock.py
readwritelock/: readwritelock.py
readwritelock_old/: __init__.py
tests/: test_readwritelock.py
