[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readwritelock"
version = "0.1.0"
description = "Ein einfacher Reader-Writer-Lock für Python-Threads"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name="Modguz" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[tool.pytest.ini_options]
# AsyncIO‑Plugin: strikte Loop‑Policy und function‑Scope für async Fixtures
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
addopts = """
    --benchmark-autosave
    --benchmark-save-data
    --benchmark-json=benchmark_results.json
"""